issue #6 milestone 1 - updating third party jars
Resolved build errors. Removed wrims-comparison module since it's included in wrims-engine. Removed local file copies of libs.